ADDED : ModelMapper config in BookStoreConfig in config package and dependency of ModelMapper

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.20'
+    compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.7'
 }
 
 test {
