ADDED : Jwt utility and generated token for User/Admin when signin and give token as a response to the client for further access to APIs

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,13 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
-    compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.3.2.RELEASE'
+//    compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.3.2.RELEASE'
+    // https://mvnrepository.com/artifact/com.auth0/java-jwt
+    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+    compile group: 'org.springframework.boot', 'name': 'spring-boot-starter-security'
+    // https://mvnrepository.com/artifact/javax.validation/validation-api
+    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+
 }
 
 
