--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,7 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# App Properties
+bezkoder.app.jwtSecret= rajkush
+bezkoder.app.jwtExpirationMs= 86400000
