ADDED : Java Mail Sender configuration to send mail when user signup with book store and user has to be verified with confirmation link sent to users emailId to use any API

--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,8 @@ dependencies {
     compile group: 'org.springframework.boot', 'name': 'spring-boot-starter-security'
     // https://mvnrepository.com/artifact/javax.validation/validation-api
     compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
-
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.3.0.RELEASE'
 }
 
 
