--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,13 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # App Properties
-bezkoder.app.jwtSecret= rajkush
-bezkoder.app.jwtExpirationMs= 86400000
+rajkush.app.jwtSecret= rajkush
+rajkush.app.jwtExpirationMs= 86400000
+
+#Mail Properties
+spring.mail.port= 587
+spring.mail.host= smtp.gmail.com
+spring.mail.username= ${emailId}
+spring.mail.password= ${password}
+spring.mail.properties.mail.smtp.auth= true
+spring.mail.properties.mail.smtp.starttls.enable= true
