--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,15 @@ rajkush.app.jwtExpirationMs= 86400000
 #Mail Properties
 spring.mail.port= 587
 spring.mail.host= smtp.gmail.com
-spring.mail.username= ${emailId}
-spring.mail.password= ${password}
+spring.mail.username= rajkush211.rk@gmail.com
+spring.mail.password= kushkushkush
 spring.mail.properties.mail.smtp.auth= true
 spring.mail.properties.mail.smtp.starttls.enable= true
+
+#Rabbitmq configuration
+spring.rabbitmq.port = 5672
+spring.rabbitmq.username = rajkush
+spring.rabbitmq.password = rajkush
+spring.rabbitmq.template.routing-key = rabbitKey
+spring.rabbitmq.template.exchange = rabbitExchange
+spring.rabbitmq.template.default-receive-queue = RajRabbitQueueMails
