ADDED : Redis Cache configuration and caching the findByAuthor result set into the Redis cache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ rajkush.app.jwtExpirationMs= 86400000
 spring.mail.port= 587
 spring.mail.host= smtp.gmail.com
 spring.mail.username= rajkush211.rk@gmail.com
-spring.mail.password= kushkushkush
+spring.mail.password= Rajlaxmi211@
 spring.mail.properties.mail.smtp.auth= true
 spring.mail.properties.mail.smtp.starttls.enable= true
 
@@ -45,3 +45,14 @@ spring.rabbitmq.password = rajkush
 spring.rabbitmq.template.routing-key = rabbitKey
 spring.rabbitmq.template.exchange = rabbitExchange
 spring.rabbitmq.template.default-receive-queue = RajRabbitQueueMails
+
+spring.cache.redis.cache-null-values=false
+spring.cache.redis.time-to-live=600000
+spring.cache.redis.use-key-prefix=true
+
+spring.cache.type=redis
+spring.cache.cache-names=articleCache,allArticlesCache 
+
+spring.redis.jedis.pool.max-active=7 
+spring.redis.jedis.pool.max-idle=7
+spring.redis.jedis.pool.min-idle=2
