--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,8 +33,8 @@ rajkush.app.jwtExpirationMs= 86400000
 #Mail Properties
 spring.mail.port= 587
 spring.mail.host= smtp.gmail.com
-spring.mail.username= rajkush211.rk@gmail.com
-spring.mail.password= Rajlaxmi211@
+spring.mail.username= ${EMAIL}
+spring.mail.password= ${PASSWORD}
 spring.mail.properties.mail.smtp.auth= true
 spring.mail.properties.mail.smtp.starttls.enable= true
 
