REFACTORED : Cart Service to get all books from cart to return CartQtyDto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,8 +50,10 @@ spring.cache.redis.cache-null-values=false
 spring.cache.redis.time-to-live=600000
 spring.cache.redis.use-key-prefix=true
 
+spring.redis.port=6379
 spring.cache.type=redis
-spring.cache.cache-names=articleCache,allArticlesCache 
+spring.redis.host=localhost
+spring.cache.cache-names=rajCache 
 
 spring.redis.jedis.pool.max-active=7 
 spring.redis.jedis.pool.max-idle=7
