ADDED : Message.properties to access return messages

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,1 +1,14 @@
 ALL_BOOKS = Getting all Books
+CSV_FILE_LOADED = CSV file Loaded Successfully
+BOOK_ADDED = Book successfully added
+ACCOUNT_IS_VERIFIED = Congratulations!! Your account is verified.
+ADDED_TO_CART = Added to cart successfully
+REMOVED_FROM_CART = Book removed from cart successfully
+ADDED_TO_WISHLIST = Added to Wishlist successfully
+REMOVED_FROM_WISHLIST = Book removed from wishlist successfully
+VERIFY_ACCOUNT = Please verify your account by visiting your email account to proceed!!
+USERNAME_NOT_AVAILABLE = Error: Username is already taken!
+EMAIL_IS_TAKEN = Error: Email is already in use!
+ROLE_NOT_FOUND = Error: Role is not found.
+USER_REGISTERED = User registered successfully
+WELCOME_HEADER = Welcome to Book Store, Thank you for registering with us!!
