REFACTORED : Code to take JWT token instead of userId to fetch user details

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -12,3 +12,4 @@ EMAIL_IS_TAKEN = Error: Email is already in use!
 ROLE_NOT_FOUND = Error: Role is not found.
 USER_REGISTERED = User registered successfully
 WELCOME_HEADER = Welcome to Book Store, Thank you for registering with us!!
+JWT_NOT_VALID = JWT token is Expired or it is not Valid
