ADDED : API's to handle Forgot password and then reset passsword using emailId

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -13,3 +13,6 @@ ROLE_NOT_FOUND = Error: Role is not found.
 USER_REGISTERED = User registered successfully
 WELCOME_HEADER = Welcome to Book Store, Thank you for registering with us!!
 JWT_NOT_VALID = JWT token is Expired or it is not Valid
+EMAIL_SENT = "Reset Password link is sent to your Email Account"
+EMAIL_NOT_EXISTS = "Email is not registered with us, Please check your email Id"
+PASSWORD_CHANGED = "Password is changed successfully"
