ADDED : Customer Details API's to store details of customer and Custom Exception is also added to handle Exception

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -16,3 +16,4 @@ JWT_NOT_VALID = JWT token is Expired or it is not Valid
 EMAIL_SENT = "Reset Password link is sent to your Email Account"
 EMAIL_NOT_EXISTS = "Email is not registered with us, Please check your email Id"
 PASSWORD_CHANGED = "Password is changed successfully"
+CUSTOMER_DETAILS_ADDED = "Customer details added successfully"
