--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -17,3 +17,4 @@ EMAIL_SENT = "Reset Password link is sent to your Email Account"
 EMAIL_NOT_EXISTS = "Email is not registered with us, Please check your email Id"
 PASSWORD_CHANGED = "Password is changed successfully"
 CUSTOMER_DETAILS_ADDED = "Customer details added successfully"
+QUANTITY_EXCEEDED = "Quantity of book exceeded as we don't have that much amount of books in our stock"
