ADDED : Code to send Order details to customer's Email Id after placing an order

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -18,3 +18,4 @@ EMAIL_NOT_EXISTS = "Email is not registered with us, Please check your email Id"
 PASSWORD_CHANGED = "Password is changed successfully"
 CUSTOMER_DETAILS_ADDED = "Customer details added successfully"
 QUANTITY_EXCEEDED = "Quantity of book exceeded as we don't have that much amount of books in our stock"
+ORDER_PLACED = "Your order of Books has been successfully placed"  
