MODIFIED : Link provided in the mail for resetting the password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,8 +40,8 @@ spring.mail.properties.mail.smtp.starttls.enable= true
 
 #Rabbitmq configuration
 spring.rabbitmq.port = 5672
-spring.rabbitmq.username = rajkush
-spring.rabbitmq.password = rajkush
+spring.rabbitmq.username = guest
+spring.rabbitmq.password = guest
 spring.rabbitmq.template.routing-key = rabbitKey
 spring.rabbitmq.template.exchange = rabbitExchange
 spring.rabbitmq.template.default-receive-queue = RajRabbitQueueMails
