ADDED: ElasticsSearch Configuration and load book data on ES server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/book
 
 # Username and password
 spring.datasource.username = root
-spring.datasource.password = rajkush211
+spring.datasource.password = password
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
@@ -33,8 +33,8 @@ rajkush.app.jwtExpirationMs= 86400000
 #Mail Properties
 spring.mail.port= 587
 spring.mail.host= smtp.gmail.com
-spring.mail.username= ${EMAIL}
-spring.mail.password= ${PASSWORD}
+spring.mail.username= aratiupare@gmail.com
+spring.mail.password= @8862087101
 spring.mail.properties.mail.smtp.auth= true
 spring.mail.properties.mail.smtp.starttls.enable= true
 
@@ -58,3 +58,7 @@ spring.cache.cache-names=rajCache
 spring.redis.jedis.pool.max-active=7 
 spring.redis.jedis.pool.max-idle=7
 spring.redis.jedis.pool.min-idle=2
+
+# Local Elasticsearch config
+elasticsearch.host=localhost
+elasticsearch.port=9200
