--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
-//    compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.3.2.RELEASE'
+    //  compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.3.2.RELEASE'
     // https://mvnrepository.com/artifact/com.auth0/java-jwt
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
     compile group: 'org.springframework.boot', 'name': 'spring-boot-starter-security'
@@ -41,9 +41,18 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.3.0.RELEASE'// https://mvnrepository.com/artifact/redis.clients/jedis
     compile group: 'redis.clients', name: 'jedis', version: '3.3.0'
 
+   // Elasticsearch Depedency
+    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+    //compile 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.8.0'
+
+    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-test
+    testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.3.0.RELEASE'
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+    //compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.1.0'
+
 }
-
-
 test {
     useJUnitPlatform()
 }
