ADDED: Update and Delete Service APIs for Elasticserach and Mysql Database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,3 +62,4 @@ spring.redis.jedis.pool.min-idle=2
 # Local Elasticsearch config
 elasticsearch.host=localhost
 elasticsearch.port=9200
+server.port= 8085
