--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -19,3 +19,6 @@ PASSWORD_CHANGED = "Password is changed successfully"
 CUSTOMER_DETAILS_ADDED = "Customer details added successfully"
 QUANTITY_EXCEEDED = "Quantity of book exceeded as we don't have that much amount of books in our stock"
 ORDER_PLACED = "Your order of Books has been successfully placed"  
+UPDATED_BOOK = "Book updated successfully"
+DELETED_BOOK = "Book deleted successfully"
+BOOK_NOT_FOUND = "Book not found"
