ADDED: SpringProfile-dev in Bookstore Application, VerifyAccoutController is made as development profile using @Profile annotation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,4 +62,9 @@ spring.redis.jedis.pool.min-idle=2
 # Local Elasticsearch config
 elasticsearch.host=localhost
 elasticsearch.port=9200
+
+# Change Default port for BookStore Application
 server.port= 8085
+
+#Spring Profile
+spring.profiles.active=dev
